fix: visitor QR manual code, scan history names, floating QR modal, IST timezone, bulk pass section grouping, security scan history full-screen detail